2005-12-14  James Turner  <james@worldforge.org>

	* configure.ac: remove support sigc++ 1.2.x, since recent versions of 2.0
	  support all the compilers we require. 

2005-12-14  James Turner  <james@worldforge.org>

	* Eris/Operations.cpp: fix case-sensitivity of #include directive, caught
	  by Simon.

2005-12-13  James Turner  <james@worldforge.org>

	* Eris/Operations.cpp, Eris/Operations.h: copy the extended Atlas operations
	  definitions over from sear - only the attack operation for the moment.
	  
	* Eris/Avatar.cpp, Eris/Avatar.h: add support for issuing attack operations
	  via the Avatar. Note that combat in still being prototyped at the server,
	  Atlas and rule level, so this support may be removed or replaced.

2005-12-11  James Turner  <james@worldforge.org>

	* Eris/Types.h, Eris/TypeInfo.h: move forward declarations for TypeInfo and
	  related containers to a single place.

	* Eris/Avatar.cpp, Eris/Avatar.h: provide a way to query the operations
	  supported by the currently wielded entity (tool) from the Avatar. Extend
      the useOn method to allow the tool operation to be explicitly specified.

2005-12-10  James Turner  <james@worldforge.org>

	* Eris/EntityRef.cpp, Eris/EntityRef.h, Eris/Makefile.am: add a smart-
	  pointer for Entities, which clears itself when they are deleted,
	  and updates itself when they are retrieved from the server
	  dynamically.
	  
	* Eris/Entity.h, Eris/Entity.cpp: emit a signal on deletion
	
	* Eris/View.h: doxygen comment tweaks

2005-12-09  James Turner  <james@worldforge.org>

    * Eris/Entity.cpp, Eris/View.cpp, Eris/Timeout.cpp, Eris/Lobby.cpp: 
      replace many occurences of foo.count(x) followed by foo[x] with
      iterator = foo.find(x), which is half the work.

2005-12-01  James Turner  <james@worldforge.org>

    * Eris/Entity.cpp: don't assert if sight(create) is received after an
      entity is already in the View: just log a warning and emit the signal.
      