@@ -1,5 +1,12 @@
 2005-12-14  James Turner  <james@worldforge.org>
 
+	* Eris/Entity.h, Eris/Timeout.h, Eris/TypeInfo.h, Eris/TypeService.cpp,
+	  Eris/TypeService.h, Eris/View.h: switch to using sigc++ 2.0 types for
+	  many signals and slots, and change core Eris objects to inherit
+	  sigc::trackable.
+
+2005-12-14  James Turner  <james@worldforge.org>
+
 	* configure.ac: remove support sigc++ 1.2.x, since recent versions of 2.0
 	  support all the compilers we require. 
 
